--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ python-dotenv==1.1.1
 requests==2.32.4
 django-cors-headers==4.6.0
 intasend-python==1.0.4
+uvicorn==0.24.0
+gunicorn==21.2.0
+psycopg2-binary==2.9.7
